chore: modernize to Java 21 idioms and upgrade dependencies
Java 21 modernization:
- instanceof pattern matching in equals() — User, Role, Authority
- Sealed exception hierarchy: BusinessException sealed permits
  ResourceNotFoundException, EmailAlreadyExistsException (final)
- Switch pattern matching in RestExceptionHandler — 3 @ExceptionHandler
  methods merged into 1 with switch (exception) { case ... }
- Arrays.asList() → List.of() in Config.java (immutable, null-safe)
- Collectors.toList() → .toList() in JwtConfig, RestExceptionHandler
- Collectors.joining() → String.join() in TokenAuthenticationService
- Optional chain in UserLogged — replaced if/null/try-catch with
  Optional.ofNullable().filter().map().flatMap().orElse()
- List.get(0) → List.getFirst() (Sequenced Collections) in tests
- Removed unused Collectors imports

Dependency upgrades:
- Spring Cloud: 2024.0.1 → 2025.0.0 (aligned with Boot 3.5.x)
- spring-cloud-contract plugin: 4.2.0 → 4.3.0
- maven-compiler-plugin: 3.13.0 → 3.15.0
- springdoc-openapi: kept at 2.8.5 (3.0.x requires Boot 4.x)

Tests: 92, 0 failures

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>